package cn.wjb114514.visitor.code;

public abstract class Person {
    public abstract void accept(Action action);
}
